--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,24 +7,24 @@
 <!-- Kök -->
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
-<link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
+<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 
 <script
 			  src="https://code.jquery.com/jquery-2.2.4.min.js"
 			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 			  crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="https://data-deveb.github.io/assets/js/deveb.js"></script>
+<script type="text/javascript" src="/assets/js/deveb.js"></script>
 
-<link href="https://data-deveb.github.io/assets/scss/dvb.css" rel="stylesheet">
-<link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
-<link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
+<link href="/assets/scss/dvb.css" rel="stylesheet">
+<link href="/assets/css/deveb.ilkel.css" rel="stylesheet">
+<link href="/assets/css/deveb.genel.css" rel="stylesheet">
 
 <!--prism.js-->
 <link rel="stylesheet"
-      href="https://data-deveb.github.io/assets/plugins/prism/prism.css">
+      href="/assets/plugins/prism/prism.css">
 
-<script src="https://data-deveb.github.io/assets/plugins/prism/prism.js"></script>
+<script src="/assets/plugins/prism/prism.js"></script>
 
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
