--- a/assets/scss/dvb-ing.css
+++ b/assets/scss/dvb-ing.css
@@ -5429,4 +5429,274 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
   flex-direction: row-reverse;
 }
 
+[data-imgelik] {
+  padding-right: .6em;
+  padding-left: .6em;
+  border-radius: .4rem;
+  box-sizing: border-box;
+  font-size: .85em;
+  border: 2px solid transparent;
+  position: relative;
+}
+
+[data-imgelik~="küçük"] {
+  font-size: .70em;
+}
+
+[data-imgelik~="büyük"] {
+  font-size: 1.1em;
+}
+
+[data-imgelik~="kapsül"] {
+  border-radius: 10rem;
+}
+
+[data-imgelik~="sol-kapsül"] {
+  border-top-left-radius: 10rem;
+  border-bottom-left-radius: 10rem;
+}
+
+[data-imgelik~="sağ-kapsül"] {
+  border-top-right-radius: 10rem;
+  border-bottom-right-radius: 10rem;
+}
+
+[data-imgelik~="boncuklu"]::before,
+[data-imgelik~="sol-boncuklu"]::before {
+  border-width: .5em;
+  border-style: solid;
+  content: "";
+  border-radius: 100%;
+  display: block;
+  position: absolute;
+  left: -7px;
+  top: 3px;
+}
+
+[data-imgelik~="boncuklu"]::after,
+[data-imgelik~="sağ-boncuklu"]::after {
+  border-width: .5em;
+  border-style: solid;
+  content: "";
+  border-radius: 100%;
+  display: block;
+  position: absolute;
+  right: -7px;
+  top: 3px;
+}
+
+[data-imgelik~="boncuklu"] {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+[data-imgelik~="sivri"] {
+  border-radius: 0;
+}
+
+[data-imgelik~="bombe"] {
+  border-radius: 50% / 10%;
+}
+
+[data-imgelik~="yuvar"] {
+  border-radius: 50% / 50%;
+}
+
+[data-imgelik~="birincil"] {
+  background-color: #007bff;
+  color: #fff;
+  border: 2px solid #007bff;
+}
+
+[data-imgelik~="tel"] {
+  border-width: 2px;
+  border-style: solid;
+  background-color: transparent;
+}
+
+[data-imgelik~="tel"][data-imgelik~="birincil"],
+[data-imgelik~="birincil"]::after,
+[data-imgelik~="birincil"]::before {
+  border-color: #007bff;
+  color: #007bff;
+}
+
+/* ==========================================================================
+    MENÜ ÖRGÜSÜ s0.1
+    Sadece css yöntemiyle kurulmuş sekme örgüsü
+----------------------------------------------------------------------------- */
+[data-menü] > input:first-child {
+  display: none;
+}
+
+[data-menü] > input:first-child:checked + label + ul {
+  display: flex !important;
+}
+
+[data-menü~="yukarı"] > label {
+  display: flex;
+  order: 2;
+}
+
+[data-menü~="yukarı"] > ul {
+  display: flex;
+  order: 1;
+}
+
+[data-menü~="boş"] > input:checked + label {
+  background-color: gray;
+}
+
+[data-menü~="boş"] > ul li a:hover,
+[data-menü~="boş"] > ul li a.etkin {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+[data-menü~="boş"] > ul li a,
+[data-menü~="boş"] > label {
+  display: inherit;
+  flex: 1 1 0;
+}
+
+[data-menü~="boş"] ul li a {
+  padding: 5px 0 5px 5px;
+}
+
+[data-menü~="varsayılan"] > ul li a,
+[data-menü~="varsayılan"] > label {
+  display: inherit;
+  padding: 10px 15px;
+  flex: 1 1 0;
+  background-color: #2c2171;
+  color: #fefefe;
+  text-align: center;
+  justify-content: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+[data-menü~="varsayılan"] > input:checked + label {
+  background-color: gray;
+}
+
+[data-menü~="varsayılan"] > ul li a:hover,
+[data-menü~="varsayılan"] > ul li a.etkin {
+  background-color: #3c3181;
+}
+
+@media screen and (min-width: 576px) and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  [data-kçk~="0"] {
+    -ms-flex-preferred-size: auto !important;
+    width: auto !important;
+  }
+}
+[data-uyarı] {
+  position: relative;
+  width: 100%;
+  font-family: roboto;
+}
+
+[data-uyarı] > div {
+  border: 2px solid #eee;
+  padding: 15px;
+  background-color: #fff;
+  border-radius: 4px;
+  color: #666;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+[data-uyarı~="kapatılamaz"] > div > label:last-child {
+  display: none;
+}
+
+[data-uyarı~="tamamlandı"] > div {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+
+[data-uyarı~="birincil"] > div {
+  color: #004085;
+  background-color: #cce5ff;
+  border-color: #b8daff;
+}
+
+[data-uyarı~="başarılı"] > div {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+
+[data-uyarı~="tehlike"] > div {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
+[data-uyarı~="tehlike"] > div {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
+[data-uyarı~="sorun"] > div {
+  color: #856404;
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+}
+
+[data-uyarı~="bilgi"] > div {
+  color: #0c5460;
+  background-color: #d1ecf1;
+  border-color: #bee5eb;
+}
+
+[data-uyarı] > div h2 {
+  width: 100%;
+  margin: 0;
+}
+
+[data-uyarı] > div p {
+  width: 100%;
+  margin: 0;
+}
+
+[data-uyarı] > input {
+  display: none;
+}
+
+[data-uyarı] > input:checked + div {
+  opacity: 0;
+  transition: all ease 0.3s;
+  visibility: hidden;
+  margin-top: -10vh;
+  margin-right: 10vh;
+  z-index: 100;
+}
+
+[data-uyarı] > input:checked + div {
+  position: absolute;
+  right: 0;
+  left: 0;
+}
+
+[data-uyarı] > div {
+  display: flex;
+}
+
+[data-uyarı] > div > div {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+}
+
+[data-uyarı] > div > label {
+  display: flex;
+  flex: 0;
+}
+
+.birincil {
+  background-color: #ba68c8;
+}
+
 /*# sourceMappingURL=dvb-ing.css.map */
