--- a/assets/scss/dvb-ing.scss
+++ b/assets/scss/dvb-ing.scss
@@ -4,3 +4,7 @@
 @import "ozel";
 @import "KapOrgusu";
 @import "SekmeOrgusu";
+@import "imgelik";
+@import "menu";
+@import "uyarilar";
+@import "renk";
