--- a/assets/scss/dvb.scss
+++ b/assets/scss/dvb.scss
@@ -6,4 +6,6 @@
 @import "SekmeOrgusu";
 @import "imgelik";
 @import "menu";
-@import "uyarilar"; 
+@import "uyarilar";
+@import "renk";
+@import "RenkOrgusu";
