--- a/_includes/icerik.html
+++ b/_includes/icerik.html
@@ -22,6 +22,8 @@
       <li><a href="/belgeler/sekme-orgusu.html" class="{% if page.url == '/belgeler/sekme-orgusu.html' %}etkin{% endif %}">Sekme Örgüsü</a></li>
       <li><a href="/belgeler/renk-orgusu.html" class="{% if page.url == '/belgeler/renk-orgusu.html' %}etkin{% endif %}">Renk Örgüsü</a></li>
       <li><a href="/belgeler/terimler.html" class="{% if page.url == '/belgeler/terimler.html' %}etkin{% endif %}">Terimler</a></li>
+      <li><a href="/belgeler/takim.html" class="{% if page.url == '/belgeler/takim.html' %}etkin{% endif %}">Takım</a></li>
+      <li><a href="/belgeler/tarayici-destegi.html" class="{% if page.url == '/belgeler/tarayici-destegi.html' %}etkin{% endif %}">Tarayıcı Desteği</a></li>
 
   </ul>
 </div>
