--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,28 @@
 {% include head.html %}
 </head>
 <body data-gnl="sütun sığdır">
-  <header data-gnl="24 24p" class="header">
-  {% include header.html %}
-  </header>
-  <div data-gnl="1g uzat oluk-çevre sığdır">
-    <div class="sol-bölge" data-gnl="24 24p " data-kçk="4 24p sığdır">{% include icerik.html %}</div>
-    <div data-gnl="24 24p oluk üstte" data-kçk="20 24p sığdır">
-      {% if page.title %}
-      <div data-gnl="1 1p" class="sayfa-başlığı">
-        <h1 data-gnl="24 24p ortada-ol">{{ page.title }}</h1>
+
+  <div data-gnl="1 1p sığdır oluk-çevre">
+    <div id="sol-alan" data-gnl="1 1p" data-kçk="4 22p sığdır oluk-çevre">
+      <div data-gnl="1 1p göbekte geniş-aralıklı" data-dev="2 3p sağda-ol göbekte-ol">
+        <a data-gnl="0" href="/" class="logo2">deveb</a><span class="birincil" data-gnl="0 göbekte-ol" data-imgelik="kapsül küçük">sürüm 0.1</span>
       </div>
-      {% endif %}
-      <div data-gnl="1 1p">
-        {{ content }}
+      <div data-gnl="1 1p" data-dev="2 3p sağda-ol üstte-ol">
+        {% include icerik.html %}
+      </div>
+    </div>
+    <div id="içerik" data-gnl="1 1p" data-kçk="18 22p sığdır oluk-çevre">
+      <div data-gnl="1 1p oluk üstte">
+        {% if page.title %}
+        <div data-gnl="1 1p" data-kçk="20 24p" class="sayfa-başlığı">
+          <h1 data-gnl="24 24p">{{ page.title }}</h1>
+        </div>
+        {% endif %}
+        <div data-gnl="24 24p" data-kçk="20 24p">
+
+          {{ content }}
+
+        </div>
       </div>
     </div>
   </div>
