--- a/assets/scss/_ozel.scss
+++ b/assets/scss/_ozel.scss
@@ -13,14 +13,16 @@
 
 html{
   font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  color: #333; }
+  font-size: 14.5px;
+  color: #454555; }
 
 a{
   text-decoration: none;
   color: #4c41a1; }
 
-
+p{
+  margin: 0.4em 0;
+}
 
     .önizleme{background-color:#efefef; padding:10px;}
     .önizleme [data-gnl]{border:1px solid #2c2171; background-color: #4c41a1; padding:10px; color:#eee;}
