--- a/assets/scss/dvb.scss
+++ b/assets/scss/dvb.scss
@@ -7,5 +7,9 @@
 @import "imgelik";
 @import "menu";
 @import "uyarilar";
-@import "renk";
+@import "SinifsalRenkler";
+@import "SinifsalSekiller";
 @import "RenkOrgusu";
+@import "kart";
+@import "basmal";
+@import "basimcilik";
