--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div id="header" data-gnl="24 24p ortada göbekte" data-ort="solda">
     <ul class="menü-genel" data-gnl="0 göbekte">
-      <li><a href="https://data-deveb.github.io" class="logo beri-sol-1">deveb</a></li>
+      <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
     <ul class="menü-genel" data-gnl="1 1p göbekte ortada" data-kçk="0">
       <li><a href="/belgeler/deveb.html">Belgeler</a></li>
@@ -10,7 +10,7 @@
     <ul class="menü-genel" data-kçk="0 sağda-ol göbekte-ol küçükleri-gizle">
       <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github" aria-hidden="true"></i></a></li>
       <li><a href="https://www.facebook.com/datadeveb/"> <i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-            <li><a href="https://twitter.com/datadeveb"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+      <li><a href="https://twitter.com/datadeveb"> <i class="fa fa-twitter" aria-hidden="true"></i></a></li>
       <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-users" aria-hidden="true"></i></a></li>
     </ul>
 </div>
