--- a/assets/scss/_caprazlama.scss
+++ b/assets/scss/_caprazlama.scss
@@ -80,10 +80,10 @@
 }
 
 @mixin göbekte {
-    -webkit-box-align: center;
+  /*  -webkit-box-align: center;
     -ms-flex-align: center;
     -ms-grid-row-align: center;
-    align-items: center;
+    align-items: center; */
     -ms-flex-line-pack:center;
         align-content:center;
 }
