--- a/assets/scss/_dil-tr.scss
+++ b/assets/scss/_dil-tr.scss
@@ -13,6 +13,8 @@ $dev: dev;
 
 /* Kap Örgüsü */
 /* Konumlama - Kap Örgüsü */
+$sütun: sütun; 
+
 $kaymadan: kaymadan;
 $yatay-kayma: yatay-kayma;
 
@@ -36,8 +38,8 @@ $sağda-ol: sağda-ol;
 $ortada-ol: ortada-ol;
 $solda-ol: solda-ol;
 
-$geniş-aralıklı: geniş-aralıklı;
-$aralıklı: aralıklı;
+$araları-aralık: araları-aralık;
+$dengeli-aralık: dengeli-arala;
 $uzat: uzat;
 $uzun-ol: uzun-ol;
 
