--- a/assets/scss/_kart.scss
+++ b/assets/scss/_kart.scss
@@ -9,6 +9,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: space-between;
+
+}
+[data-kart] .bilgi{
+  display: block;
+  width:100%;
 }
 [data-kart] p {
     padding: 10px;
@@ -19,4 +25,6 @@
 }
 [data-kart] .alt{
     background-color:#eed;
+    width: 100%;
+    padding: 10px;
 }
