--- a/assets/scss/_dil-tr.scss
+++ b/assets/scss/_dil-tr.scss
@@ -1,4 +1,4 @@
-/* Türkçe */
+/* Türkçe http://www.objgen.com/json/models/nuZ*/
 
 /* Ekran Örgüsü */
 $gnl: gnl;
@@ -13,7 +13,7 @@ $dev: dev;
 
 /* Kap Örgüsü */
 /* Konumlama - Kap Örgüsü */
-$sütun: sütun; 
+$sütun: sütun;
 
 $kaymadan: kaymadan;
 $yatay-kayma: yatay-kayma;
