--- a/assets/scss/dvb.css
+++ b/assets/scss/dvb.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* Türkçe */
+/* Türkçe http://www.objgen.com/json/models/nuZ*/
 /* Ekran Örgüsü */
 /* Kap Örgüsü */
 /* Konumlama - Kap Örgüsü */
@@ -217,7 +217,7 @@ doğrultular: dikey (sütun sözcüğü iptal), yatay (satır sözcüğü iptal)
   -ms-flex: 1 1 0 !important;
   flex: 1 1 0 !important;
   overflow: auto;
-  height: 100%;
+  max-height: 100%;
 }
 
 body[data-gnl~="sütun"] {
@@ -948,7 +948,7 @@ S01 [data-ufk] UFAK-BÜYÜKLERİYLE | 300px ≤ *
     -ms-flex: 1 1 0 !important;
     flex: 1 1 0 !important;
     overflow: auto;
-    height: 100%;
+    max-height: 100%;
   }
 
   /*  Kap Örgüsü Parça Ayarları */
@@ -1642,7 +1642,7 @@ S02 KÇK-ilker ($kçk) veya (kçk-ilker) | Ekran ölçeği: 576px ≤ *
     -ms-flex: 1 1 0 !important;
     flex: 1 1 0 !important;
     overflow: auto;
-    height: 100%;
+    max-height: 100%;
   }
 
   /*  Kap Örgüsü Parça Ayarları */
@@ -2336,7 +2336,7 @@ S03 ORTA-ilker ($ort) veya (ort-ilker) | Ekran ölçeği: 768px ≤ *
     -ms-flex: 1 1 0 !important;
     flex: 1 1 0 !important;
     overflow: auto;
-    height: 100%;
+    max-height: 100%;
   }
 
   /*  Kap Örgüsü Parça Ayarları */
@@ -3030,7 +3030,7 @@ S04 BÜYÜK-ilker ($byk) veya (byk-ilker) | Ekran ölçeği: 992px ≤ *
     -ms-flex: 1 1 0 !important;
     flex: 1 1 0 !important;
     overflow: auto;
-    height: 100%;
+    max-height: 100%;
   }
 
   /*  Kap Örgüsü Parça Ayarları */
@@ -3724,7 +3724,7 @@ S05 KOCAMAN-ilker ($kcm) veya (kcm-ilker) | Ekran ölçeği: 1200px ≤ *
     -ms-flex: 1 1 0 !important;
     flex: 1 1 0 !important;
     overflow: auto;
-    height: 100%;
+    max-height: 100%;
   }
 
   /*  Kap Örgüsü Parça Ayarları */
@@ -4418,7 +4418,7 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     -ms-flex: 1 1 0 !important;
     flex: 1 1 0 !important;
     overflow: auto;
-    height: 100%;
+    max-height: 100%;
   }
 
   /*  Kap Örgüsü Parça Ayarları */
