--- a/assets/scss/_KapOrgusu.scss
+++ b/assets/scss/_KapOrgusu.scss
@@ -40,7 +40,8 @@ doğrultular: dikey (sütun sözcüğü iptal), yatay (satır sözcüğü iptal)
         -ms-flex: 1 1 0 !important;
             flex: 1 1 0 !important;
     overflow: auto;
-    height: 100%;}
+    max-height: 100%;
+  }
 }
 
 @mixin parça-düzeni($ekran){
@@ -134,7 +135,7 @@ doğrultular: dikey (sütun sözcüğü iptal), yatay (satır sözcüğü iptal)
 
     [data-#{$gnl}~="sütun"]{
       @include sütun;
-      
+
     }
 
     @include sığdır($gnl);
