--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,19 +5,15 @@
 <title>{% if page.title %} {{ page.title }}{% endif %}</title>
 
 <!-- Kök -->
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-
 <script
 			  src="https://code.jquery.com/jquery-2.2.4.min.js"
 			  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 			  crossorigin="anonymous"></script>
 
-<script type="text/javascript" src="/assets/js/deveb.js"></script>
+<script src="/assets/js/deveb.js"></script>
 
 <link href="/assets/scss/dvb.css" rel="stylesheet">
-<link href="/assets/css/deveb.ilkel.css" rel="stylesheet">
 <link href="/assets/css/deveb.genel.css" rel="stylesheet">
 
 <!--prism.js-->
